// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not parse other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "undefined",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should not parse other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "undefined",
    "path": [],
    "received": "string",
  },
]
`;
